Backport 1.2.2-beta.3 to 1.20.4